<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.crixmod.sailorcast.view.AlbumActivity">
    <item android:id="@+id/action_display_title" android:title="@string/action_display_title"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_display_button" android:title="@string/action_display_button"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_fav_button" android:title="@string/action_fav_button"
        android:orderInCategory="10" app:showAsAction="always" android:icon="@drawable/detail_card_favorited" />
    <item android:id="@+id/action_unfav_button" android:title="@string/action_unfav_button"
        android:orderInCategory="10" app:showAsAction="always" android:icon="@drawable/detail_card_favorite" />
</menu>
