<?xml version="1.0" encoding="utf-8"?>
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <Button
                        android:visibility="gone"
                        android:id="@+id/btn_phone_super"
                        android:background="@drawable/square_border"
                        android:text="@string/btn_phone_super"
                        android:textColor="@color/grey_medium"
                        android:onClick="onPlayButtonClick"

                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:visibility="gone"
                        android:id="@+id/btn_phone_high"
                        android:background="@drawable/square_border"
                        android:textColor="@color/grey_medium"
                        android:text="@string/btn_phone_high"
                        android:onClick="onPlayButtonClick"

                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:visibility="gone"
                        android:id="@+id/btn_phone_normal"
                        android:background="@drawable/square_border"
                        android:textColor="@color/grey_medium"
                        android:text="@string/btn_phone_normal"
                        android:onClick="onPlayButtonClick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                    />

            </LinearLayout>
