<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/bottombar"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_medium">

    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/translucent_grey_extra_light"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/bottom_action_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bottom_action_home_ic"
                    android:layout_width="@dimen/bottom_ic_image_size"
                    android:layout_height="@dimen/bottom_ic_image_size"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/bottom_action_home_text"
                    android:textColor="@color/bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/home_button_text" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/bottom_action_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bottom_action_bookmark_ic"

                    android:layout_width="@dimen/bottom_ic_image_size"
                    android:layout_height="@dimen/bottom_ic_image_size"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_bookmark" />

                <TextView
                    android:id="@+id/bottom_action_bookmark_text"
                    android:textColor="@color/bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/bookmark_button_text" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/bottom_action_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bottom_action_history_ic"

                    android:layout_width="@dimen/bottom_ic_image_size"
                    android:layout_height="@dimen/bottom_ic_image_size"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:id="@+id/bottom_action_history_text"
                    android:textColor="@color/bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/history_button_text" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/bottom_action_compass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bottom_action_compass_ic"
                    android:layout_width="@dimen/bottom_ic_image_size"
                    android:layout_height="@dimen/bottom_ic_image_size"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_compass" />

                <TextView
                    android:id="@+id/bottom_action_compass_text"
                    android:textColor="@color/bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/compass_button_text" />

            </LinearLayout>


        </TableRow>
    </TableLayout>
</LinearLayout>
